src/style/style.scss
@import "styleAccount.scss";
@import "styleModalForm.scss";
@import "styleStartPage.scss";
@import "styleTaskItem.scss";
@import "style_Adaptive.scss";


*{
    box-sizing: border-box;
}
body{
    margin:0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

/*------------------------------------------HEADER START--------------------------------------------------*/
.header{
    // height: 400px;
    background: #000000;


}

.header__top{
    width: 80vw;
    height: 50px;
    margin: auto;
    display: flex;
    justify-content: space-between;
    border-bottom: 2px solid #7c7c7c;
    

}

.header__top-logo{
    display: flex;
    align-items: center;

    img{
        width: 28px;
        margin-right: 5px;
    }

}

.header__top-logo-title{
    color: #ffffff;  
    font-size: 30px;

    span{
        font-weight: bold;
        color: #8000ff;
    }

}

.header__top-button{
    display: flex;
    align-items: center;
    
}
.header__top-user{
    display: flex;
    align-items: center;
    color: #8000ff;
    text-transform: uppercase;
    padding: 0 10px;    

    img{
        width: 35px;
        margin-right: 5px;
    }
}


%button-style{
    color: #ffffff;    
    border: 2px solid #8000ff;
    box-shadow: 0 0 10px #8000ff;
    border-radius: 10px;
    transition: 0.5s;   
    cursor: pointer; 
    font-size: 16px
}

.header__top-button-login{
    @extend %button-style;
    padding: 7px 20px; 
    margin-right: 15px;
    background:  #000000;

    &:hover{
        background: #8000ff;
    }
    
}

.header__top-button-registration{
    @extend %button-style;
    padding: 7px 10px; 
    background: #8000ff;

    &:hover{
        background: #000000;;
    }
}

.header__center{
    padding: 20px;
    background-image: url('../../public/images/background.jpg');
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;

}


/*------------------------------------------HEADER END--------------------------------------------------*/

/*------------------------------------------SLIDER START--------------------------------------------------*/


.slider{
    color: #ffffff;
    width: 600px;
    border: 0px solid red;
    position: relative;
    margin: auto;
    overflow: hidden;

}
.slider__line{
    position: relative;
    display: flex;
    border: 0px solid rgb(52, 122, 37);    
    left: 0;
    transition: 1s;
    width: 1800px;
    
}
.slider__line-item{
    border: 0px solid rgb(43, 37, 122);
    text-align: center;
    padding: 40px 60px;
    width: 600px;
}

.slider__title-style{
    margin: 0 0 20px;
    font-size: 32px;

}
.slider__subtitle-style{
    margin: 0;

}

%slider_button_style{
    color: #ffffff;
    font-size: 22px;
    width: 40px;
    height: 40px;
    border-radius: 50px;
    border: 0px solid black;
    background-color: #000000;
    cursor: pointer;
    transition: 0.5s;
    opacity: 0.5;

}

.slider__button-prev{
    @extend %slider_button_style;
    position: absolute;
    left: 10px;
    top: 40%;
    &:hover{
        opacity: 1;
    }
}

.slider__button-next{
    @extend %slider_button_style;
    position: absolute;
    right: 10px;
    top: 40%;
    &:hover{
        opacity: 1;
    }

}

.slider__dots{
    display: flex;
    position: absolute;
    right: 45%;
    bottom: 10px;
    align-items: center;

}
.slider__dot{
    width: 10px;
    height: 10px;
    border-radius: 50px;
    background-color:#ffffff;
    margin: 5px;
    opacity: 0.3;
    cursor: pointer;
    transition: 0.5s;
    &:hover{
        opacity: 0.5;
    }
}
.slider__dot-active{
    background: #8000ff;
    width: 14px;
    height: 14px;
    opacity: 1;
    &:hover{
        opacity: 1;
    }

}


/*------------------------------------------SLIDER END--------------------------------------------------*/


/*------------------------------------------FOOTER START--------------------------------------------------*/
.footer{
    background: #000000;
}

.footer__subscription{
    display: flex;
    justify-content: center;
    background-color: #8000ff;
    padding: 15px;
}

.footer__subscription-info{
    display: flex;
    align-items: center;
    padding-right:20px ;
    color: #ffffff; 


}

.footer__subscription-form{
    height: 40px;
    form{
        display: flex;
    }
    
}
.footer__subscription-form-input{
    outline: none;
    box-sizing: border-box;
    width: 250px;
    height: 40px;
    border-radius: 10px 0 0 10px;
    border: 0px solid #000000;
    border-bottom: 3px solid rgb(0, 0, 0);
    padding-left: 20px;    

}

.footer__subscription-form-button{
    box-sizing: border-box;
    cursor: pointer;
    width: 110px;
    height: 40px;
    border-radius: 0 10px 10px 0;
    background-color: #000000;
    color: #ffffff;
    border: 1px solid #000000;
    transition: 0.5s;

    &:hover{
        background-color: #303030;
    }

}

.subscription-error{
    font-size: 12px;
    background: #0D0D0D;    
    color: red;
    text-align: center;
    border-radius: 0 7px 7px 0;
    border-left: 3px solid red;
    padding: 5px 0;

}
.subscription-done{
    font-size: 12px;
    background: #0D0D0D;    
    color: #1eff00;
    text-align: center;
    border-radius: 0 7px 7px 0;
    border-left: 3px solid #1eff00;
    padding: 5px 0;

}

.footer__social_networks{
    display: flex;
    justify-content: center;
    padding: 30px;
}

.social_networks_style{
    width: 40px;
    height: 40px;
    margin: 0 10px;
    border: 0px solid #ffffff;
    box-shadow: 0 0 5px #ffffff;
    border-radius: 50px;
    display: flex;
    align-items: center;
    
    background-repeat: no-repeat;
    background-size: 25px;
    background-position: center;
    transition: 0.5s;

    img{
        width: 25px;
        margin: auto;
        opacity: 0;
    }

    &:hover{
        background-image: none;
        background-color: #ffffff;
    }
    &:hover img{
        opacity: 1;
    }
  
}

.social_networks_youtube{
    background-image: url(../../public/images/logo_youtube_white.png);
}

.social_networks_instagram{
    background-image: url(../../public/images/logo_instagram_white.png);
}

.social_networks_vk{
    background-image: url(../../public/images/logo_vk_white.png);
}

.social_networks_telegram{
    background-image: url(../../public/images/logo_telegram_white.png);
}

.social_networks_twitch{
    background-image: url(../../public/images/logo_twitch_white.png);
}

.footer__info{
    width: 80vw;
    margin: auto;
    border-top: 1px solid white;
    text-align: center;
    padding: 10px 0;
}

.footer__info-title{
    color: #999999;
    font-size: 14px;
}





/*------------------------------------------FOOTER END--------------------------------------------------*/

.main{
    background-color: #0D0D0D;
    padding: 10px;
    min-height: 500px;
}

.hidden{
    display: none !important;    
}

